--- a/PBL6/Resources/Localizable.strings
+++ b/PBL6/Resources/Localizable.strings
@@ -15,3 +15,10 @@
 "sologan" = "ServeSync luôn đồng hành cùng bạn";
 "welcome_title" = "Hãy cùng tham gia hoạt động cộng đồng";
 "started" = "Bắt đầu";
+
+//Login
+
+"login" = "Đăng nhập";
+"email" = "Email";
+"forgot_password" = "Quên mật khẩu";
+"password" = "Mật khẩu";
