SR-86 feat: Integrate API to view detailed information for students

--- a/PBL6/Resources/Localizable.strings
+++ b/PBL6/Resources/Localizable.strings
@@ -53,7 +53,8 @@
 "address" = "Địa chỉ cư trú:";
 "email_info" = "Email:";
 "phone_number" = "Số điện thoại:";
-
+"male" = "Nam";
+"female" = "Nữ";
 
 //Forgot Password
 "forgot_password" = "Quên mật khẩu";
