--- a/PBL6/Resources/Localizable.strings
+++ b/PBL6/Resources/Localizable.strings
@@ -87,6 +87,11 @@
 "happening" = "Đang diễn ra";
 "upcoming" = "Sắp diễn ra";
 "done" = "Đã tổ chức";
+"attendance" = "Đang tổ chức";
+"closedregistration"= "Đã đóng đăng ký";
+"registration" = "Đang mở đăng ký";
+"registered" = "Đã đăng ký";
+"approved" = "Chưa mở đăng ký";
 "see_all" = "Xem tất cả";
 "no_event" = "Không có sự kiện nào";
 
@@ -105,3 +110,24 @@
 "external"= "Hoạt động bên ngoài";
 "collaboration" = "Hoạt động hợp tác";
 "general_information" = "Thông tin chung";
+"complain" = "Khiếu nại";
+"roll_call" = "Điểm danh";
+"register" = "Đăng ký";
+"people" = "Người";
+
+//Popup Message
+"popup_title" = "Đăng ký tham gia hoạt động?";
+"self_introduce" = "Tự giới thiệu";
+"confirm" = "Xác nhận";
+"cancel" = "Huỷ";
+"self_introduce" = "Kinh nghiệm, ...";
+"register_success" = "Đăng ký thành công";
+//Roll Call
+"location_permission_is_not_granted_title" = "Location access permission is not granted";
+
+"location_permission_is_not_granted_message" = "You need to go to Settings, allow Location access permission to be able to continue using this function.";
+"camera_permission_is_not_granted_title" = "Camera access permission is not granted";
+"camera_permission_is_not_granted_message" = "You need to go to Settings, allow Camera access permission to be able to continue using this function.";
+
+//Search
+"search" = "Tìm kiếm";
