--- a/PBL6/Resources/Localizable.strings
+++ b/PBL6/Resources/Localizable.strings
@@ -83,6 +83,7 @@
 "grading_&_regulations" = "Mức điểm & Quy định";
 "setting" = "Cài đặt";
 "help" = "Help";
+"change_password" = "Đổi mật khẩu";
 
 //Profile
 "student_ID" = "Mã sinh viên:";
@@ -185,3 +186,7 @@ Vui lòng thử lại";
 
 //Search
 "search" = "Tìm kiếm";
+
+// Change password
+"alert_message_invalid_change_password" = "Vui lòng nhập đầy đủ dữ liệu trước khi tiếp tục";
+"new_password_not_match_confirm_password_alert_message" = "Mật khẩu mới và xác nhận mật khẩu không khớp";
